--- a/index.html
+++ b/index.html
@@ -13,55 +13,61 @@
 <body>
     <header>
         <button type="button" id="logo-title">
-            <h1 >Your Best Task List Ever</h1>
+            <h1>Your Best Task List Ever</h1>
         </button>
     </header>
 
-    <aside>
-        <section id="section-one-sidebar">
-            <div>
-                <button type="button">
-                    <img src="style/sidebar-all-png.png">
-                    <h3>All</h3>
-                </button>
-            </div>
+    <div id="container">
+        <aside>
+            <section id="section-one-sidebar">
+                <div>
+                    <button type="button">
+                        <img src="style/sidebar-all-png.png">
+                        <h3>All</h3>
+                    </button>
+                </div>
 
-            <div>
-                <button type="button">
-                    <img src="style/sidebar-today-png.png">
-                    <h3>Today</h3>
-                </button>
-            </div>
+                <div>
+                    <button type="button">
+                        <img src="style/sidebar-today-png.png">
+                        <h3>Today</h3>
+                    </button>
+                </div>
 
-            <div>
-                <button type="button">
-                    <img src="style/sidebar-week-png.png">
-                    <h3>This week</h3>
-                </button>
-            </div>
+                <div>
+                    <button type="button">
+                        <img src="style/sidebar-week-png.png">
+                        <h3>This week</h3>
+                    </button>
+                </div>
 
-            <div>
-                <button type="button">
-                    <img src="style/sidebar-month-png.png">
-                    <h3>This month</h3>
-                </button>
-            </div>
-        </section>
+                <div>
+                    <button type="button">
+                        <img src="style/sidebar-month-png.png">
+                        <h3>This month</h3>
+                    </button>
+                </div>
+            </section>
 
-        <section id="section-two-sidebar">
-            <h2>Projects</h2>
-            <div>
-                <button type="button">
-                    <img src="style/sidebar-more-png.png">
-                    <h3>Add Project</h3>
-                </button>
-            </div>
+            <section id="section-two-sidebar">
+                <h2>Projects</h2>
+                <div>
+                    <button type="button">
+                        <img src="style/sidebar-more-png.png">
+                        <h3>Add Project</h3>
+                    </button>
+                </div>
 
-        </section>
-    </aside>
+            </section>
+        </aside>
 
-    <main></main>
-
+        <main>
+            <button type="button" id="add-task">
+                <img src="style/sidebar-more-png.png">
+                <h3>Add Task</h3>
+            </button>
+        </main>
+    </div>
 
     <footer>
         <h1>Copyright © 2022 by LS-Kaution</h1>
